config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-server
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
      - name: ping
        image: docker.io/sonasingh46/ping:v3
        ports:
        - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: ping-service
spec:
  selector:
    app: ping
  ports:
  # Default port used by the image
  - port: 8080
